feat(Conditional Rendering): use Conditional Rendering

--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -3,10 +3,8 @@
     margin: 20px;
     font-size: 48px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    button {
-        margin-left: 25px;
-        margin-right: 25px;
-        font-size: 40px;
-        min-width: 50px;
+    .button-group {
+        display: flex;
+        justify-content: space-between;
     }
 }
