--- a/src/containers/index/header/header.scss
+++ b/src/containers/index/header/header.scss
@@ -1,4 +1,4 @@
-@import '../../styles/color.scss';
+@import '../../../styles/color.scss';
 .header {
     height: 50px;
     background-color: $background;
