feat(github-user-list): add github-user-list component & add react-font-awesome

--- a/src/containers/index/github-user/github-user.scss
+++ b/src/containers/index/github-user/github-user.scss
@@ -1,3 +1,8 @@
 .github-user {
     margin: 20px;
+    .github-user-display {
+        display: flex;
+        align-content: center;
+        margin-top: 20px;
+    }
 }
