--- a/src/containers/index/github-user/github-user-item/github-user-item.scss
+++ b/src/containers/index/github-user/github-user-item/github-user-item.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10px;
+    padding: 10px;
     border-bottom: 1px solid #ccc;
     cursor: pointer;
     div {
@@ -18,4 +18,7 @@
     .github-user-list-arrow {
         float: right;
     }
+}
+.github-user-list-user-item:hover {
+    background-color: #ccc;
 }
